# Quantum-Computing

./: .gitignore  README.md  pyproject.toml  qc_cheatsheet.html
CS4268_Scribe_Notes/: Lecture1 Final Notes.tex  Lecture1 Scribe Template.tex  Lecture10 Scribe Template.tex  Lecture2 Final Notes.tex  Lecture2 Scribe Template.tex  Lecture3 Final Notes.tex  Lecture3 Scribe Template.tex  Lecture4 Final Notes.tex  Lecture4 Scribe Template.tex  Lecture5 Final Notes.tex  Lecture5 Scribe Template.tex  Lecture6 Final Notes.tex  Lecture6 Scribe Template.tex  Lecture7 Final Notes.tex  Lecture7 Scribe Template.tex  Lecture8 Final Notes.tex  Lecture8 Scribe Template.tex  Lecture9 Scribe Template.tex  main.bib  main.tex  preamble.sty
docs/: lecture_roadmap.md
labs/: lecture_01_qubits.py  lecture_02_bases_and_unitaries.py  lecture_03_composite_systems.py  lecture_04_teleportation_and_reversible.py  lecture_05_primitives.py  lecture_06_deutsch_jozsa_bv.py  lecture_07_qft.py  lecture_08_simon.py  lecture_09_order_finding.py  lecture_10_shor_scaffold.py
notebooks/lectures/: lecture_01_qubits.ipynb  lecture_02_bases_and_unitaries.ipynb  lecture_03_composite_systems.ipynb  lecture_04_teleportation_and_reversible.ipynb  lecture_05_primitives.ipynb  lecture_06_deutsch_jozsa_bv.ipynb  lecture_07_qft.ipynb  lecture_08_simon.ipynb  lecture_09_order_finding.ipynb  lecture_10_shor_scaffold.ipynb
projects/: README.md  project_bv_oracle_workbench.py  project_shor_factor_15.py  project_simon_hidden_structure.py  project_teleportation_diagnostics.py
tools/: generate_notebooks.py
(+8 files in other folders)
