[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cs4268-qiskit-companion"
version = "0.1.0"
description = "Lecture-aligned Qiskit labs for the CS4268 quantum computing notes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "qiskit>=2.0,<3.0",
]

[project.optional-dependencies]
notebook = [
  "jupyter>=1.1",
]
noise = [
  "qiskit-aer>=0.17,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

